[package]
name = "risp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "repl"
src = "bin/repl"

[dependencies]
comms-rs = { git = "https://github.com/ostrosco/comms-rs.git", optional = true }
num = "0.4"
rand = "0.8"

[features]
comms-rs = ["dep:comms-rs"]
